--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -6,6 +6,7 @@ cmds = ['composer install --no-dev --optimize-autoloader']
 
 [phases.build]
 cmds = [
+    'chmod -R 775 storage bootstrap/cache',
     'php artisan config:cache',
     'php artisan route:cache',
     'php artisan view:cache'
