--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,16 +1,36 @@
+# =========================
+# Laravel Production Nixpacks
+# =========================
+
 [phases.setup]
-nixPkgs = ['php82', 'php82Packages.composer']
-
-[phases.install]
-cmds = ['composer install --no-dev --optimize-autoloader']
-
-[phases.build]
-cmds = [
-    'chmod -R 775 storage bootstrap/cache',
-    'php artisan config:cache',
-    'php artisan route:cache',
-    'php artisan view:cache'
+nixPkgs = [
+  "php82",
+  "php82Packages.composer"
 ]
 
+# -------------------------
+# Install Dependencies
+# -------------------------
+[phases.install]
+cmds = [
+  "composer install --no-dev --optimize-autoloader"
+]
+
+# -------------------------
+# Build Phase
+# -------------------------
+[phases.build]
+cmds = [
+  "chmod -R 775 storage bootstrap/cache",
+  "php artisan key:generate --force || true",
+  "php artisan config:clear",
+  "php artisan config:cache",
+  "php artisan route:cache",
+  "php artisan view:cache"
+]
+
+# -------------------------
+# Start Command (IMPORTANT)
+# -------------------------
 [start]
-cmd = 'php artisan serve --host=0.0.0.0 --port=$PORT'
+cmd = "php -S 0.0.0.0:$PORT -t public"
