--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,36 +1,20 @@
-# =========================
-# Laravel Production Nixpacks
-# =========================
-
 [phases.setup]
 nixPkgs = [
   "php82",
-  "php82Packages.composer"
+  "php82Packages.composer",
+  "php82Extensions.pdo",
+  "php82Extensions.pdo_pgsql"
 ]
 
-# -------------------------
-# Install Dependencies
-# -------------------------
 [phases.install]
 cmds = [
   "composer install --no-dev --optimize-autoloader"
 ]
 
-# -------------------------
-# Build Phase
-# -------------------------
 [phases.build]
 cmds = [
-  "chmod -R 775 storage bootstrap/cache",
-  "php artisan key:generate --force || true",
-  "php artisan config:clear",
-  "php artisan config:cache",
-  "php artisan route:cache",
-  "php artisan view:cache"
+  "chmod -R 777 storage bootstrap/cache"
 ]
 
-# -------------------------
-# Start Command (IMPORTANT)
-# -------------------------
 [start]
 cmd = "php -S 0.0.0.0:$PORT -t public"
