--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,20 +1,36 @@
+# nixpacks.toml
+# Laravel + Vite + FrankenPHP on Railway
+
 [phases.setup]
 nixPkgs = [
   "php82",
-  "php82Packages.composer",
   "php82Extensions.pdo",
-  "php82Extensions.pdo_pgsql"
+  "php82Extensions.pdo_pgsql",
+  "php82Extensions.mbstring",
+  "php82Extensions.bcmath",
+  "php82Extensions.curl",
+  "php82Extensions.openssl",
+  "php82Extensions.tokenizer",
+  "php82Extensions.xml",
+  "nodejs_22",
+  "npm"
 ]
 
 [phases.install]
 cmds = [
-  "composer install --no-dev --optimize-autoloader"
+  "composer install --no-dev --optimize-autoloader",
+  "npm install"
 ]
 
 [phases.build]
 cmds = [
-  "chmod -R 777 storage bootstrap/cache"
+  "npm run build",
+  "php artisan key:generate --force",
+  "php artisan migrate --force",
+  "php artisan storage:link",
+  "php artisan optimize:clear",
+  "php artisan optimize"
 ]
 
 [start]
-cmd = "php -S 0.0.0.0:$PORT -t public"
+cmd = "php artisan serve --host=0.0.0.0 --port=8080"
