--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -30,6 +30,11 @@ cmds = [
   "php artisan storage:link",
   "php artisan optimize:clear",
   "php artisan optimize"
+  
+  "php artisan config:clear",
+  "php artisan cache:clear",
+  "php artisan route:clear",
+  "php artisan view:clear",
 ]
 
 [start]
