--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -24,17 +24,17 @@ cmds = [
 
 [phases.build]
 cmds = [
-  "npm run build",
-  "php artisan key:generate --force",
-  "php artisan migrate --force",
-  "php artisan storage:link",
-  "php artisan optimize:clear",
-  "php artisan optimize"
-  
-  "php artisan config:clear",
-  "php artisan cache:clear",
-  "php artisan route:clear",
-  "php artisan view:clear",
+    "npm run build",
+    "php artisan key:generate --force",
+    "php artisan migrate --force",
+
+    "php artisan config:clear",
+    "php artisan route:clear",
+    "php artisan view:clear",
+    "php artisan cache:clear",
+
+    "npm run build",
+    "php artisan storage:link"
 ]
 
 [start]
