--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,6 +1,3 @@
-# nixpacks.toml
-# Laravel + Vite + FrankenPHP on Railway
-
 [phases.setup]
 nixPkgs = [
   "php82",
@@ -24,18 +21,17 @@ cmds = [
 
 [phases.build]
 cmds = [
-    "npm run build",
-    "php artisan key:generate --force",
-    "php artisan migrate --force",
+  "rm -rf public/build",
 
-    "php artisan config:clear",
-    "php artisan route:clear",
-    "php artisan view:clear",
-    "php artisan cache:clear",
+  "php artisan config:clear",
+  "php artisan route:clear",
+  "php artisan view:clear",
+  "php artisan cache:clear",
 
-    "npm run build",
-    "php artisan storage:link"
+  "npm run build",
+
+  "php artisan storage:link"
 ]
 
 [start]
-cmd = "php artisan serve --host=0.0.0.0 --port=8080"
+cmd = "php artisan serve --host=0.0.0.0 --port=$PORT"
